--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,50 +11,53 @@ x-web-defaults: &web-defaults
   depends_on:
     - redis
   environment:
-    OCTOPRINT_TUNNEL_PORT_RANGE: '0-0'
-    EMAIL_HOST: '${EMAIL_HOST-}'
-    EMAIL_HOST_USER: '${EMAIL_HOST_USER-}'
-    EMAIL_HOST_PASSWORD: '${EMAIL_HOST_PASSWORD-}'
-    EMAIL_PORT: '${EMAIL_PORT-587}'
-    EMAIL_USE_TLS: '${EMAIL_USE_TLS-True}'
-    DEFAULT_FROM_EMAIL: '${DEFAULT_FROM_EMAIL-changeme@example.com}'
-    DEBUG: '${DEBUG-False}'    # Don't set DEBUG to True unless you know what you are doing. Otherwise the static files will be cached in browser until hard-refresh
-    ADMIN_IP_WHITELIST: '${ADMIN_IP_WHITELIST-}'
-    SITE_USES_HTTPS: '${SITE_USES_HTTPS-False}'
-    SITE_IS_PUBLIC: '${SITE_IS_PUBLIC-False}'
-    SOCIAL_LOGIN: '${SOCIAL_LOGIN-False}'
-    REDIS_URL: '${REDIS_URL-redis://redis:6379}'
-    DATABASE_URL: '${DATABASE_URL-sqlite:////app/db.sqlite3}'
-    INTERNAL_MEDIA_HOST: '${INTERNAL_MEDIA_HOST-http://web:3334}'
-    ML_API_HOST: '${ML_API_HOST-http://ml_api:3333}'
-    ACCOUNT_ALLOW_SIGN_UP: '${ACCOUNT_ALLOW_SIGN_UP-False}'
-    WEBPACK_LOADER_ENABLED: '${WEBPACK_LOADER_ENABLED-False}'
-    TELEGRAM_BOT_TOKEN: '${TELEGRAM_BOT_TOKEN-}'
-    TWILIO_ACCOUNT_SID: '${TWILIO_ACCOUNT_SID-}'
-    TWILIO_AUTH_TOKEN: '${TWILIO_AUTH_TOKEN-}'
-    TWILIO_FROM_NUMBER: '${TWILIO_FROM_NUMBER-}'
-    SENTRY_DSN: '${SENTRY_DSN-}'
-    PUSHOVER_APP_TOKEN: '${PUSHOVER_APP_TOKEN-}'
-    SLACK_CLIENT_ID: '${SLACK_CLIENT_ID-}'
-    SLACK_CLIENT_SECRET: '${SLACK_CLIENT_SECRET-}'
-    VERSION:
+    EMAIL_HOST: 'smtp.sendgrid.net'
+    EMAIL_DOMAIN: 'smtp.sendgrid.net'
+    EMAIL_HOST_USER: 'apikey'
+    EMAIL_PORT: '587'
+    EMAIL_USE_TLS: 'False'
+    DEFAULT_FROM_EMAIL: 'willwalker1226@gmail.com'
+    DEBUG: 'False' # Don't set DEBUG to True unless you know what you are doing. Otherwise the static files will be cached in browser until hard-refresh
+    SITE_USES_HTTPS: 'True'
+    SITE_IS_PUBLIC: "True"
+    SOCIAL_LOGIN: 'False'
+    REDIS_URL: 'redis://obico-redis:6379'
+    DATABASE_URL: 'sqlite:////app/db.sqlite3'
+    INTERNAL_MEDIA_HOST: 'http://obico-web:3334'
+    ML_API_HOST: 'http://ml_api:3333'
+    ACCOUNT_ALLOW_SIGN_UP: 'False'
+    WEBPACK_LOADER_ENABLED: 'False'
+    OCTOPRINT_TUNNEL_PORT_RANGE: '${OCTOPRINT_TUNNEL_PORT_RANGE-15853-15873}'
+
 
 services:
   ml_api:
     hostname: ml_api
     restart: unless-stopped
+    networks:
+      - proxynet
     build:
       context: ml_api
     environment:
         DEBUG: 'True'
         FLASK_APP: 'server.py'
         #ML_API_TOKEN:
-        #HAS_GPU: 'False'
+        HAS_GPU: 'False'
     command: bash -c "gunicorn --bind 0.0.0.0:3333 --workers 1 wsgi"
 
-  web:
+  obico-web:
     <<: *web-defaults
-    hostname: web
+    hostname: obico-web
+    labels:
+      - "traefik.enable=true"
+      - traefik.http.routers.obico-web.tls=true
+      - "traefik.http.services.obico-web.loadbalancer.server.port=3334"
+      - "traefik.http.routers.obico-web.entrypoints=websecure"
+      - traefik.http.routers.obico-web.service=obico-web
+      - traefik.http.routers.obico-web.rule=Host("spaghetti.wizzlehq.org")
+      - traefik.http.routers.obico-web.tls.certresolver=myresolver
+    networks:
+      - proxynet
     ports:
       - "3334:3334"
     depends_on:
@@ -63,9 +66,19 @@ services:
 
   tasks:
     <<: *web-defaults
-    hostname: tasks
+    hostname: tasks    
+    networks:
+      - proxynet
     command: sh -c "celery -A config worker --beat -l info -c 2 -Q realtime,celery"
 
   redis:
+    hostname: obico-redis
+    networks:
+      - proxynet
     restart: unless-stopped
     image: redis:5.0-alpine
+
+networks:
+  proxynet:
+    name: proxy_net
+    external: true
